feat: add frontend Resident